# AndroidServoView

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/mozilla/servo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/test/java/org/mozilla/servo/: ExampleUnitTest.kt
geckoview/: build.gradle
geckoview/src/androidTest/java/org/mozilla/servoview/: ExampleInstrumentedTest.java
geckoview/src/main/: AndroidManifest.xml
geckoview/src/main/java/com/mozilla/servoview/: JNIServo.java
geckoview/src/main/java/org/mozilla/gecko/: GeckoAppShell.java  GeckoProfile.java  GeckoVRManager.java
geckoview/src/main/java/org/mozilla/gecko/gfx/: GeckoDisplay.java  PanZoomController.java
geckoview/src/main/java/org/mozilla/gecko/util/: ThreadUtils.java
geckoview/src/main/java/org/mozilla/geckoview/: GeckoResult.java  GeckoRuntime.java  GeckoRuntimeSettings.java  GeckoSession.java  GeckoSessionSettings.java  GeckoView.java  LibServo.java  ServoLooper.java  ServoSurface.java  SessionTextInput.java
geckoview/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  README.md  build.rs
rust/android/: build.sh  fake-ld-arm.sh  fake-ld-armv7.sh
rust/src/: api.rs  gl_glue.rs  glue.rs  lib.rs
servo/: Cargo.toml  build.rs
servo/android/: build.sh  fake-ld-arm64.sh  fake-ld.sh
servo/src/: api.rs  glue.rs  lib.rs  logs.rs
servoview/: build.gradle
servoview/src/test/java/org/mozilla/servoview/: ExampleUnitTest.java
