[package]
name = "servobridge"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"

[lib]
name = "servobridge"
crate-type = ["cdylib"]

[dependencies]
# libservo = { git = "https://github.com/servo/servo", rev = "c9f60c5a67" }
libservo = { path = "/Users/paul/git/servo/components/servo/" }
libc = "0.2"
log = "0.4"
jni = "0.9"
android_logger = "0.4"

[build-dependencies]
gl_generator = "0.6"
