[package]
name = "servobridge"
version = "0.0.1"
build = "build.rs"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "servobridge"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo/" , rev = "91398cf"}
libc = "0.2"
log = "0.4"
jni = "0.9"
android_logger = "0.5"

[build-dependencies]
gl_generator = "0.6"
