[package]
name = "servobridge"
version = "0.0.1"
build = "build.rs"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "servobridge"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo/" , rev = "625634a027"}
libc = "0.2"
log = "0.4"
jni = "0.9"
android_injected_glue = "0.2"
android_logger = "0.5"

[build-dependencies]
gl_generator = "0.6"
