[package]
name = "servobridge"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]
build = "build.rs"

[lib]
name = "servobridge"
crate-type = ["cdylib"]

[dependencies]
libservo = { git = "https://github.com/servo/servo", rev = "a6ce817045" }
libc = "0.2"
log = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.4"

[build-dependencies]
gl_generator = "0.6"
moz-cheddar = "0.4"

[replace]
# "openssl:0.9.12" = { path = "../../rust-openssl/openssl/" }
# "https://github.com/servo/webrender#0.52.0" = { path = '../../webrender/webrender/' }
# "https://github.com/servo/webrender#webrender_api:0.52.0" = { path = '../../webrender/webrender_api/' }
